[package]
name = "flamme-rouge"
version = "0.1.0"
authors = ["storyfeet <thebeaky@psmail.net>"]
edition = "2018"
description = "a place to test out flamme rouge strategies"
repository = "https://github.com/storyfeet/flamme-rouge-bots"


[lib]
name = "flamme_lib"
path = "src/lib.rs"

[[bin]]
name = "flamme_runner"
path = "src/main.rs"

[dependencies]
termion = "1.5.1"
card_deck = "0.1.8" 
